# plotcode-demo-api

./: .gitignore  Agents_ AI Assisted End-to-End Delivery Automation (Plotcode).md  Mission_AI_Assisted_End-to-End_Delivery_Automation_(Plotcode).docx  Tech_Stack_AI_Assisted_End-to-End_Delivery_Automation_(Plotcode).docx
plotcode/: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json  vps-setup.sh
plotcode/agents/: analysis_agent.py  api.py  coder_agent.py  deployment_agent.py  intake_agent.py  main.py  monitoring_agent.py  pr_agent.py  railway.json  requirements.txt  seed_db.py  telegram_bot.py  telegram_rbac.py  validation_agent.py
plotcode/agents/middleware/: auth.py
plotcode/agents/prompts/: README.md  analysis_agent.md  coder_agent.md  deployment_agent.md  intake_agent.md  monitoring_agent.md  pr_agent.md  validation_agent.md
plotcode/agents/shared/: __init__.py  auth.py  events.py  git_client.py  llm_client.py  state.py  telegram_notifier.py
plotcode/agents/uploads/: fe32172d-2632-4ada-a630-f51a078ceae4.md
plotcode/api/: index.py  main.py
plotcode/dashboard/: index.html
plotcode/docs/: ai-skills-reference.md  rbac-guide.md
plotcode/frontend/: index.html
plotcode/frontend/src/: App.jsx  api.js  index.css  utils.js
plotcode/frontend/src/components/: ChatWidget.jsx  (+3 more)
plotcode/orchestration/: package-lock.json  package.json
plotcode/orchestration/src/: index.ts  server.ts
plotcode/scripts/: happy_path_test.py
plotcode/src/: index.py
plotcode/supabase/: schema.sql
(+46 files in other folders)
