[project]
name = "plotcode-api"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.5.0",
    "pymongo[srv]>=4.6.0",
    "openai>=1.0.0",
    "GitPython>=3.1.0",
    "PyGithub>=2.1.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
]

[tool.vercel]
entrypoint = "agents/api:app"
